Add basic oauth for the api

--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   },
   "devDependencies": {
     "@skpm/builder": "^0.5.11",
-    "@skpm/path": "^0.1.4"
+    "@skpm/path": "^0.1.4",
+    "url-search-params-polyfill": "^6.0.0"
   },
-  "author": "Kavi Dhokia <kavi@monzo.com>"
+  "author": "Kavi Dhokia <kavi@monzo.com>",
+  "dependencies": {
+    "@babel/polyfill": "^7.4.4"
+  }
 }
